change all contents of index and cantact
index and contact are complete

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 <li class="active"><a href="contact.html">Contact</a></li>
 </ul>
 <ul class="social">
-<li><a href="#" class="fa fa-twitter"></a></li>
+<li><a href="#" class="fa fa-lin"></a></li>
 <li><a href="#" class="fa fa-facebook"></a></li>
 <li><a href="#" class="fa fa-instagram"></a></li>
 </ul>
@@ -33,11 +33,11 @@
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
 
 </div>
-<aside style="background-image: url(img/profile_big.jpg);"></aside>
+<aside style="background-image: url(img/me.jpg);"></aside>
 <main>
 <a href="index.html" class="home-button"><span class="fa fa-home"></span></a>
 <h1 class="mb-5">Contact Me</h1>
-<form action="#" method="post">
+<form action="mailto: f.ahmadzadeh920@gmail.com" method="post">
 <div class="row mb-4">
 <div class="col-md-12">
 <input type="text" class="form-control" placeholder="Full Name">
