--- a/index.html
+++ b/index.html
@@ -30,21 +30,22 @@
 <li><a href="#" class="fa fa-instagram"></a></li>
 </ul>
 </br>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+
 
 </div>
-<aside style="background-image: url(img/profile_big.jpg);"></aside>
+<aside style="background-image: url(img/me.jpg);"></aside>
 <main>
-<h1 class="mb-0">Hi, I'm Kate Woodman</h1>
+<h1 class="mb-0">Hi, I'm Fatemeh Ahmadzadeh</h1>
 <div class="mb-5">
-<p class="lead mb-3">Web Designer &amp; Developer</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, magnam aut animi, excepturi voluptatum placeat dolor accusantium atque iure! Animi architecto eveniet voluptatum illo ut maiores sed, autem pariatur culpa?</p>
-<p>Commodi, neque debitis atque cum quod, culpa repellendus voluptatum voluptatem, molestiae dicta laborum nulla corporis illum, ratione rerum quibusdam ea optio! Consectetur obcaecati facilis esse reprehenderit ipsam, facere dolorem incidunt.</p>
+<p class="lead mb-3">Web Developer &amp; Data expert</p>
+<p>I am an AI and web developer with a degree in Decision sciences and knowledge engineering. My passion for the intersection of AI and web servise has been the driving force behind his education, work, and development.</p>
+<p>With over 5 years of programming experience and a strong background in communications, I have played a pivotal role in many projects. My programming specialties include Python, SQL, Javascript, data science, and recommender systems.</p>
+<p>Currently, I am  upgrading his skills in and DevOps tools, such as docker. As nowadadays customized recommender systems is essential part of any website,I can generate this type of servise for your website. Via this web service , It is possible to influence the decision-making process of marketing and managers.
+
+</p>
 </div>
 <p>
-<a href="#" class="mr-2 mb-2">Twitter</a>
-<a href="#" class="mr-2 mb-2">Facebook</a>
-<a href="#" class="mr-2 mb-2">Instagram</a>
+<a href="https://www.linkedin.com/in/f-ahmadzadeh" class="mr-2 mb-2">Linkdin</a>
 </p>
 
 </div>
