--- a/resume.html
+++ b/resume.html
@@ -30,34 +30,34 @@
 <li><a href="#" class="fa fa-instagram"></a></li>
 </ul>
 </br>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+
 
 </div>
-<aside style="background-image: url(img/profile_big.jpg);"></aside>
+<aside style="background-image: url(img/me.jpg);"></aside>
 <main>
 <a href="index.html" class="home-button"><span class="fa fa-home"></span></a>
 <h1 class="mb-5">Experience</h1>
 <div class="mb-5">
 <ul class="resume-list">
 <li>
-<h3>Product Designer, Google</h3>
-<p class="date">Sep 2017 - Present</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dolorum dolore culpa libero delectus excepturi! Repellat dolore, sapiente officia quod.</p>
+<h3>Full-Stack Developer in Farazan</h3>
+<p class="date">Jun 2016 - sep 2018</p>
+<p>developing some application related to parenting and mental problems.</p>
 </li>
 <li>
-<h3>User Experience Director, Facebook</h3>
-<p class="date">Jan 2016 - Sep 2017</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dolorum dolore culpa libero delectus excepturi! Repellat dolore, sapiente officia quod.</p>
+<h3>Data analyst in Sana</h3>
+<p class="date">Oct 2018 - Des 2021</p>
+<p>Developing data analytics module and web service, such as analytics tool which influence the decision-making process of marketing and managers.I am working </p>
 </li>
 <li>
-<h3>Mobile Application Designer, Yahoo</h3>
-<p class="date">Nov 2015 - Jan 2016</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dolorum dolore culpa libero delectus excepturi! Repellat dolore, sapiente officia quod.</p>
+<h3>Backend Developers</h3>
+<p class="date">Apr 2020- Dec 2022</p>
+<p>developing some application related to health care systems . as backend developer I run customized FHIR systems</p>
 </li>
 <li>
-<h3>Product Designer, Medium</h3>
-<p class="date">Feb 2013 - Nov 2015</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dolorum dolore culpa libero delectus excepturi! Repellat dolore, sapiente officia quod.</p>
+<h3>Freelancer (Self_employed)</h3>
+<p class="date">Feb 2022 - at present</p>
+<p>I an acqiuire worhtwhile experience due to implementing various projects</p>
 </li>
 </ul>
 </div>
@@ -65,12 +65,23 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 <div class="mb-5">
 <ul class="resume-list">
 <li>
-<h3>Harvard University</h3>
-<p class="date">2010 - 2014</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint dolorum dolore culpa libero delectus excepturi! Repellat dolore, sapiente officia quod.</p>
+<h3>Kharazmi University/ Master / Computer Sceience</h3>
+<p class="date">2013 - 2016</p>
+<p>My dissertation is related to content-based recommender systems</p>
 </li>
 </ul>
 </div>
+<h1 class="mb-5">Education</h1>
+<div class="mb-5">
+<ul class="resume-list">
+<li>
+<h3>Publications</h3>
+<p class="date">2013 - 2016</p>
+<p>My dissertation is related to content-based recommender systems</p>
+</li>
+</ul>
+</div>
+
 </main>
 </div>
 
