--- a/resume.html
+++ b/resume.html
@@ -71,7 +71,7 @@
 </li>
 </ul>
 </div>
-<h1 class="mb-5">Education</h1>
+<h1 class="mb-5">Publications</h1>
 <div class="mb-5">
 <ul class="resume-list">
 <li>
