--- a/index.html
+++ b/index.html
@@ -43,9 +43,20 @@
 <p>Currently, I am  upgrading his skills in and DevOps tools, such as docker. As nowadadays customized recommender systems is essential part of any website,I can generate this type of servise for your website. Via this web service , It is possible to influence the decision-making process of marketing and managers.
 
 </p>
+
+
+<p > <span style="font-weight: bold;">Language and Technologies :</span> Python , Django ,Rest Framework Django,Async Programming, Mysql, Postgresql , Data mining , Machine learning, Neural Networks, Docker/DockerCompose, Git, Github,Recommender systems, NLP, JavaScript, HTML, Css, 
+
+
+</p>
+<p > <span style="font-weight: bold;">Skills  :</span>Self Study, Curious, Tech Lover, Fast Learner, Creative, Problem Solving, Critical Thinking, R&D is my thing
+    </p>
+
 </div>
 <p>
 <a href="https://www.linkedin.com/in/f-ahmadzadeh" class="mr-2 mb-2">Linkdin</a>
+<a href="skype:f.ahmadzadeh920?chat" class="mr-2 mb-2">Skype</a>
+<a href="mailto: f.ahmadzadeh920@gmail.com" class="mr-2 mb-2">Email</a>
 </p>
 
 </div>
