contact and resume UPDATE

--- a/resume.html
+++ b/resume.html
@@ -75,9 +75,13 @@
 <div class="mb-5">
 <ul class="resume-list">
 <li>
-<h3>Publications</h3>
-<p class="date">2013 - 2016</p>
-<p>My dissertation is related to content-based recommender systems</p>
+
+<h3>Spam Emails</h3>
+<p class="date">2019</p>
+<p>title : <a href ="https://www.worldscientific.com/doi/abs/10.1142/S0219649219500084">Classification Spam Email with Elimination of Unsuitable Features with Hybrid of GA-Naive Bayes.</a></p>
+<h3>Content-based Recommender systems</h3>
+<p class="date">2024</p>
+<p>title :<a href =""> News Personalized Content-Based Recommender Systems by Using Deep Learning RNN and CNN Approaches</a></p>
 </li>
 </ul>
 </div>
