--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,12 @@
 <li class="active"><a href="contact.html">Contact</a></li>
 </ul>
 <ul class="social">
-<li><a href="#" class="fa fa-lin"></a></li>
-<li><a href="#" class="fa fa-facebook"></a></li>
-<li><a href="#" class="fa fa-instagram"></a></li>
+    <li class="bi bi-linkedin"><a href="https://www.linkedin.com/in/f-ahmadzadeh"></a></li>
+    <li class="bi bi-envelope"><a href="mailto: f.ahmadzadeh920@gmail.com" ></a></li>
+    <li class ="bi bi-skype"><a href="skype:f.ahmadzadeh920?chat" class="fa fa-skype"></a></li>
 </ul>
 </br>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+
 
 </div>
 <aside style="background-image: url(img/me.jpg);"></aside>
