--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 <li><a href="contact.html">Contact</a></li>
 </ul>
 <ul class="social">
-<li><a href="#" class="fa fa-twitter"></a></li>
-<li><a href="#" class="fa fa-facebook"></a></li>
-<li><a href="#" class="fa fa-instagram"></a></li>
+    <li class="bi bi-linkedin"><a href="https://www.linkedin.com/in/f-ahmadzadeh"></a></li>
+    <li class="bi bi-envelope"><a href="mailto: f.ahmadzadeh920@gmail.com" ></a></li>
+    <li class ="bi bi-skype"><a href="skype:f.ahmadzadeh920?chat" class="fa fa-skype"></a></li>
 </ul>
 </br>
 
