--- a/portfolio.html
+++ b/portfolio.html
@@ -25,12 +25,12 @@
 <li><a href="contact.html">Contact</a></li>
 </ul>
 <ul class="social">
-<li><a href="#" class="fa fa-twitter"></a></li>
-<li><a href="#" class="fa fa-facebook"></a></li>
-<li><a href="#" class="fa fa-instagram"></a></li>
+    <li><a href="https://www.linkedin.com/in/f-ahmadzadeh" class="fa fa-linkdin"></a></li>
+    <li><a href="mailto: f.ahmadzadeh920@gmail.com" class="fa fa-email"></a></li>
+    <li><a href="skype:f.ahmadzadeh920?chat" class="fa fa-skype"></a></li>
 </ul>
 </br>
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+
 
 </div>
 <aside style="background-image: url(img/me.jpg);"></aside>
