--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 
 
 </div>
-<aside style="background-image: url(img/me.jpg);"></aside>
+<aside style="background-image: url(img/me_3.jpg);"></aside>
 <main>
 
 <h1 class="mb-5">Contact Me</h1>
