--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 </div>
-<aside style="background-image: url(img/me.jpg);"></aside>
+<aside style="background-image: url(img/me_3.jpg);"></aside>
 <main>
 <h1 class="mb-0">Hi, I'm Fatemeh Ahmadzadeh</h1>
 <div class="mb-5">
