--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 
 
 </div>
-<aside style="background-image: url(img/me.jpg);"></aside>
+<aside style="background-image: url(img/me_3.jpg);"></aside>
 <main>
 <a href="index.html" class="home-button"><span class="fa fa-home"></span></a>
 <h1 class="mb-5">Portfolio</h1>
