--- a/resume.html
+++ b/resume.html
@@ -33,7 +33,7 @@
 
 
 </div>
-<aside style="background-image: url(img/me.jpg);"></aside>
+<aside style="background-image: url(img/me_3.jpg);"></aside>
 <main>
 <a href="index.html" class="home-button"><span class="fa fa-home"></span></a>
 <h1 class="mb-5">Experience</h1>
@@ -78,10 +78,10 @@
 
 <h3>Spam Emails</h3>
 <p class="date">2019</p>
-<p>title : <a href ="https://www.worldscientific.com/doi/abs/10.1142/S0219649219500084">Classification Spam Email with Elimination of Unsuitable Features with Hybrid of GA-Naive Bayes.</a></p>
+<p>title : <a href ="https://www.worldscientific.com/doi/abs/10.1142/S0219649219500084" style="color: black;">Classification Spam Email with Elimination of Unsuitable Features with Hybrid of GA-Naive Bayes.</a></p>
 <h3>Content-based Recommender systems</h3>
 <p class="date">2024</p>
-<p>title :<a href =""> News Personalized Content-Based Recommender Systems by Using Deep Learning RNN and CNN Approaches</a></p>
+<p>title :<a href ="" style="color: black;"> News Personalized Content-Based Recommender Systems by Using Deep Learning RNN and CNN Approaches</a></p>
 </li>
 </ul>
 </div>
