contact page is rectified

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <ul class="social">
     <li class="bi bi-linkedin"><a href="https://www.linkedin.com/in/f-ahmadzadeh"></a></li>
     <li class="bi bi-envelope"><a href="mailto: f.ahmadzadeh920@gmail.com" ></a></li>
-    <li class ="bi bi-skype"><a href="skype:f.ahmadzadeh920?chat" class="fa fa-skype"></a></li>
+    <li class ="bi bi-skype"><a href="skype:f.ahmadzadeh920?chat" ></a></li>
 </ul>
 </br>
 
