--- a/portfolio.html
+++ b/portfolio.html
@@ -40,8 +40,8 @@
 <div class="mb-5">
 <ul class="portfolio-list">
 <li>
-<a href="#">
-<img src="img/img_1.jpg" alt>
+<a href="https://github.com/Ahmadzadeh920/Blog-Customized/blob/main/README.md">
+<img src="img/blog.jpg" alt>
 <div class="text">
 <h3>Project Name</h3>
 <span>Visit Website</span>
@@ -49,8 +49,8 @@
 </a>
 </li>
 <li>
-<a href="#">
-<img src="img/img_2.jpg" alt>
+<a href="https://github.com/Ahmadzadeh920/Farazan_Parvari_Project/blob/master/README.md">
+<img src="img/parenting.jpg" alt>
 <div class="text">
 <h3>Project Name</h3>
 <span>Visit Website</span>
@@ -58,8 +58,8 @@
 </a>
 </li>
 <li>
-<a href="#">
-<img src="img/img_3.jpg" alt>
+<a href="https://github.com/Ahmadzadeh920/SanaPlus/blob/main/README.md">
+<img src="img/data_analyze.jpg" alt>
 <div class="text">
 <h3>Project Name</h3>
 <span>Visit Website</span>
