--- a/portfolio.html
+++ b/portfolio.html
@@ -43,8 +43,8 @@
 <a href="https://github.com/Ahmadzadeh920/Blog-Customized/blob/main/README.md">
 <img src="img/blog.jpg" alt>
 <div class="text">
-<h3>Project Name</h3>
-<span>Visit Website</span>
+<h3>Customized Authentication in Blog app</h3>
+<span>Read me</span>
 </div>
 </a>
 </li>
@@ -52,8 +52,8 @@
 <a href="https://github.com/Ahmadzadeh920/Farazan_Parvari_Project/blob/master/README.md">
 <img src="img/parenting.jpg" alt>
 <div class="text">
-<h3>Project Name</h3>
-<span>Visit Website</span>
+<h3>Parenting Project </h3>
+<span>Read me</span>
 </div>
 </a>
 </li>
@@ -61,8 +61,8 @@
 <a href="https://github.com/Ahmadzadeh920/SanaPlus/blob/main/README.md">
 <img src="img/data_analyze.jpg" alt>
 <div class="text">
-<h3>Project Name</h3>
-<span>Visit Website</span>
+<h3>Daya Analysis Web Service</h3>
+<span>Read me</span>
 </div>
 </a>
 </li>
