--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 <a href="https://github.com/Ahmadzadeh920/SanaPlus/blob/main/README.md">
 <img src="img/data_analyze.jpg" alt>
 <div class="text">
-<h3>Daya Analysis Web Service</h3>
+<h3>Data Analysis Web Service</h3>
 <span>Read me</span>
 </div>
 </a>
