--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </p>
 
 
-<p > <span style="font-weight: bold;">Language and Technologies :</span> Python , Django ,Rest Framework Django,Async Programming, Mysql, Postgresql , Data mining , Machine learning, Neural Networks, Docker/DockerCompose, Git, Github,Recommender systems, NLP, JavaScript, HTML, Css, 
+<p > <span style="font-weight: bold;">Language and Technologies :</span> Python , Django ,Rest Framework Django,Async Programming, Mysql, Postgresql , Redis, Celery, Data mining , Machine learning, Neural Networks, Docker/DockerCompose, Git, Github,Recommender systems, NLP, JavaScript, HTML, Css, 
 
 
 </p>
