update Bio and Resume

--- a/index.html
+++ b/index.html
@@ -38,9 +38,21 @@
 <h1 class="mb-0">Hi, I'm Fatemeh Ahmadzadeh</h1>
 <div class="mb-5">
 <p class="lead mb-3">Web Developer &amp; Data expert</p>
-<p>I am an AI and web developer with a degree in Decision sciences and knowledge engineering. My passion for the intersection of AI and web servise has been the driving force behind his education, work, and development.</p>
-<p>With over 5 years of programming experience and a strong background in communications, I have played a pivotal role in many projects. My programming specialties include Python, SQL, Javascript, data science, and recommender systems.</p>
-<p>Currently, I am  upgrading his skills in and DevOps tools, such as docker. As nowadadays customized recommender systems is essential part of any website,I can generate this type of servise for your website. Via this web service , It is possible to influence the decision-making process of marketing and managers.
+<p>I am an AI and web developer with a master in Computer Science. My passion lies at the intersection of AI and web services, which has been the driving force behind my education, work, and continuous development.</p>
+    
+    <p>With over 7 years of programming experience and a strong background in communications, I have played pivotal roles in various projects. My expertise encompasses Python, SQL, JavaScript, data science, and machine learning.</p>
+    <p> Currently, I am active on the Upwork platform, where I consistently receive positive feedback from clients, showcasing my commitment to delivering high-quality work and client satisfaction.</p>    
+    <div class="services">
+        <h2>Services Offered</h2>
+        <ul>
+            <li>Customized Recommender Systems Development: Designing and implementing tailored recommender systems for diverse platforms to enhance user experience and engagement.</li>
+            <li>Web Development: Providing full-stack web development solutions using technologies such as Django, JavaScript, HTML, and CSS.</li>
+            <li>AI Integration Services: Assisting businesses in incorporating AI models like Natural Language Processing (NLP) and machine learning into their existing systems to drive innovation.</li>
+            <li>API Development: Creating and maintaining RESTful APIs to ensure seamless communication between applications.</li>
+        </ul>
+    </div>
+
+    <p>In today’s digital landscape, customized recommender systems are essential for any website. I can help you develop these services to influence decision-making processes in marketing and management, ultimately driving success for your business.</p>
 
 </p>
 
