--- a/resume.html
+++ b/resume.html
@@ -55,9 +55,9 @@
 <p>developing some application related to health care systems . as backend developer I run customized FHIR systems</p>
 </li>
 <li>
-<h3>Freelancer (Self_employed)</h3>
+<h3>AI and Web developer (Self_employed)</h3>
 <p class="date">Feb 2022 - at present</p>
-<p>I an acqiuire worhtwhile experience due to implementing various projects</p>
+<p>Acquired extensive experience by successfully executing diverse projects across multiple domains on platforms such as Upwork. </p>
 </li>
 </ul>
 </div>
@@ -68,6 +68,11 @@
 <h3>Kharazmi University/ Master / Computer Sceience</h3>
 <p class="date">2013 - 2016</p>
 <p>My dissertation is related to content-based recommender systems</p>
+</li>
+<li>
+    <h3>Kharazmi University/ Bachelor  / IT engineer</h3>
+    <p class="date">2009 - 2013</p>
+    
 </li>
 </ul>
 </div>
@@ -83,6 +88,14 @@
 <p class="date">2024</p>
 <p>title :<a href ="https://github.com/Ahmadzadeh920/PersonalizedContent-BasedRecommenderSystems/blob/main/README.md" style="color: black;"> News Personalized Content-Based Recommender Systems by Using Deep Learning RNN and CNN Approaches</a></p>
 </li>
+</ul>
+</div>
+
+
+<h1 class="mb-5">Languages</h1>
+<div class="mb-5">
+<ul class="resume-list">
+<li>English: Academic IELTS score of 6</li>
 </ul>
 </div>
 
