--- a/resume.html
+++ b/resume.html
@@ -70,7 +70,7 @@
 <p>My dissertation is related to content-based recommender systems</p>
 </li>
 <li>
-    <h3>Kharazmi University/ Bachelor  / IT engineer</h3>
+    <h3>Kharazmi University/ Bachelor  / IT engineering</h3>
     <p class="date">2009 - 2013</p>
     
 </li>
