--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,7 @@
 <li><a href="index.html">Bio</a></li>
 <li class="active"><a href="portfolio.html">Portfolio</a></li>
 <li><a href="resume.html">Resume</a></li>
+<li class="active"><a href="resume-updated.pdf">Resume pdf file</li>
 
 </ul>
 <ul class="social">
