--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
 <li><a href="index.html">Bio</a></li>
 <li><a href="portfolio.html">Portfolio</a></li>
 <li class="active"><a href="resume.html">Resume</a></li>
-<li class="active"><a href="resume-updated.pdf">Resume pdf file</li>
+<li><a href="resume-updated.pdf">Resume pdf file</li>
 
 </ul>
 <ul class="social">
