--- a/portfolio.html
+++ b/portfolio.html
@@ -147,7 +147,13 @@
             <span>Read me</span>
         </div>
     </a>
-
+    <a href="https://github.com/Ahmadzadeh920/FitMatchFinder/blob/main/core/FashinClipRecommendation/Readme.md">
+        <img src="img/fitmatchfinder.png" alt>
+        <div class="text">
+            <h3>Recommender Systems for Online Clothing Shops</h3>
+            <span>Read me</span>
+        </div>
+    </a>
 </li>
 </ul>
 </div>
