--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 <ul class="mb-5">
 <li class="active"><a href="index.html">Bio</a></li>
 <li><a href="portfolio.html">Portfolio</a></li>
-<li><a href="resume.html">Resume</a></li>
 <li><a href="resume-updated.pdf">Resume pdf file</li>
 
 </ul>
@@ -36,34 +35,56 @@
 </div>
 <aside style="background-image: url(img/me_3.jpg);"></aside>
 <main>
-<h1 class="mb-0">Hi, I'm Fatemeh Ahmadzadeh</h1>
+<h2 class="mb-0">Hi, I'm Fatemeh Ahmadzadeh</h2>
 <div class="mb-5">
-<p class="lead mb-3">Web Developer &amp; Data expert</p>
-<p>I am an AI and web developer with a master in Computer Science. My passion lies at the intersection of AI and web services, which has been the driving force behind my education, work, and continuous development.</p>
+<p class="lead mb-3">AI & Backend Developer &amp;| Turning Code into Real-World Solutions</p>
+<p>Passionate about building scalable SaaS platforms and AI-powered tools with Django, OpenAI, and PostgreSQL. Love collaborating with teams to solve messy problems fast.</p>
     
-    <p>With over 7 years of programming experience and a strong background in communications, I have played pivotal roles in various projects. My expertise encompasses Python, SQL, JavaScript, data science, and machine learning.</p>
-    <p> Currently, I am active on the Upwork platform, where I consistently receive positive feedback from clients, showcasing my commitment to delivering high-quality work and client satisfaction.</p>    
-    <div class="services">
-        <h2>Services Offered</h2>
+    <p> <h4>💡 What I do:</h4>
         <ul>
-            <li>Customized Recommender Systems Development: Designing and implementing tailored recommender systems for diverse platforms to enhance user experience and engagement.</li>
-            <li>Web Development: Providing full-stack web development solutions using technologies such as Django, JavaScript, HTML, and CSS.</li>
-            <li>AI Integration Services: Assisting businesses in incorporating AI models like Natural Language Processing (NLP) and machine learning into their existing systems to drive innovation.</li>
-            <li>API Development: Creating and maintaining RESTful APIs to ensure seamless communication between applications.</li>
+           
+            <li>Build SaaS platforms (like ShopMind) using Django, OpenAI, and RAG for smarter e-commerce.</li>
+            <li>Design recommender systems and RESTful APIs that handle 10k+ requests/min.</li>
+            <li>Love blending AI/ML (NLP, LLMs, Transformers) with robust backends (PostgreSQL, Redis, Docker).</li>
         </ul>
-    </div>
 
-    <p>In today’s digital landscape, customized recommender systems are essential for any website. I can help you develop these services to influence decision-making processes in marketing and management, ultimately driving success for your business.</p>
-
-</p>
-
-
-<p > <span style="font-weight: bold;">Language and Technologies :</span> Python , Django ,Rest Framework Django, Mysql, Postgresql , Redis, Celery, Data mining , Machine learning, Neural Networks, Docker/DockerCompose, Git, Github,Recommender systems, NLP, JavaScript, HTML, Css, Deep Learning, Natural Language Processing (NLP),Transformer Models, Hugging Face Transformations, VLLM, LLM,RAG, OpenAI API.
-
-
-</p>
-<p > <span style="font-weight: bold;">Skills  :</span>Self Study, Curious, Tech Lover, Fast Learner, Creative, Problem Solving, Critical Thinking, R&D is my thing
     </p>
+    <p>
+        <h4>✨ Why work with me?</h4>
+        <ul>
+            <li>7+ years crafting solutions for startups – from FHIR-compliant healthcare systems to travel SaaS platforms.</li>
+            <li>Top-Rated freelancer with higher than 90% client satisfaction.</li>
+            <li>Obsessed with clean code, seamless integrations, and solving real-world problems.</li>
+        </ul>
+
+    </p>    
+    <p>
+        <h4>🔧 Tech I breathe:</h4>
+        Python , Django ,Rest Framework Django, Postgresql , Redis, Celery, Machine learning, Neural Networks, Docker/DockerCompose, Git, Github,Recommender systems, NLP, Natural Language Processing (NLP),Transformer Models, Hugging Face Transformations, VLLM, LLM,RAG, OpenAI API.
+    </p>
+
+    <p>
+        <h4>📚 Currently geeking out over</h4>
+        <ul>
+            <li>Fine-tuning LLMs for document intelligence</li>
+            <li>Scalable RAG pipelines with Colivara</li>
+            <li>Real-time chat systems (WebSockets + AI)</li>
+
+        </ul>
+
+    </p>
+    <p>
+        <h4>🌟 Let’s collaborate!</h4>
+        Open to AI-driven projects, backend challenges, and startups that want to innovate fast.
+<br/>
+        👉 <a href="https://ahmadzadeh920.github.io/portfolio.html"> Portfolio</a> <br/>
+        👉 <a href="https://ahmadzadeh920.github.io/resume-updated.pdf"> Resume</a> 
+    </p>
+
+</p>
+
+
+
 
 </div>
 
